added get and post to firebase DB, and rendering scores to DOM

--- a/src/style.css
+++ b/src/style.css
@@ -129,3 +129,10 @@ h1 {
 .hole6 {
   transform: rotate(180deg)
 } */
+
+
+.scoreboard {
+  text-align: center;
+  font-family: monospace;
+  font-size: 2em;
+}
