--- a/public/src/style.css
+++ b/public/src/style.css
@@ -3,6 +3,7 @@ html {
   font-size: 10px;
   background: #111111;
   color: #ffc600;
+  touch-action: manipulation;
 }
 
 *,
@@ -61,6 +62,7 @@ h1 {
   flex: 1 0 33.33%;
   overflow: hidden;
   position: relative;
+  touch-action: manipulation;
   /* border: 1px solid gray; */
 }
 
@@ -100,6 +102,7 @@ h1 {
   height: 100%;
   transition: all 0.4s;
   cursor: grab;
+  touch-action: manipulation;
 }
 
 .hole.up .hand {
