--- a/public/src/style.css
+++ b/public/src/style.css
@@ -15,7 +15,8 @@ html {
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Amatic SC', cursive;
+  font-family: 'Londrina Solid', cursive;
+  /* font-family: 'Amatic SC', cursive; */
   /* font-family: 'Metal Mania', cursive; */
 }
 
@@ -138,4 +139,33 @@ h1 {
   text-align: center;
   font-family: monospace;
   font-size: 2em;
+}
+
+
+
+/* HOME PAGE BUTTONS */
+.buttons_main {
+  width: 200px;
+  border: 4px solid black;
+  border-radius: 10px;
+  color: black;
+  font-family: 'Londrina Solid', cursive;
+  font-size: 1.5em;
+  background-color: rgb(92, 92, 92)
+}
+/*
+.yeah {
+  background-color: rgba(127, 219, 70, 0.5)
+} */
+
+.yeah:hover {
+  background-color: rgba(127, 219, 70, 1)
+}
+
+/* .nope {
+  background-color: rgba(227, 26, 26, 0.5)
+} */
+
+.nope:hover {
+  background-color: rgba(227, 26, 26, 1)
 }
