--- a/public/src/style.css
+++ b/public/src/style.css
@@ -23,6 +23,7 @@ body {
 h1 {
   text-align: center;
   font-size: 8rem;
+  font-weight: 400;
   line-height: 1;
   margin-bottom: 0;
 }
@@ -95,7 +96,7 @@ h1 {
 }
 
 .hand {
-  background: url('hand.svg') bottom center no-repeat;
+  background: url('hand2.svg') bottom center no-repeat;
   background-size: 50%;
   position: absolute;
   top: 100%;
@@ -153,6 +154,7 @@ h1 {
   font-size: 1.5em;
   background-color: rgb(92, 92, 92)
 }
+
 /*
 .yeah {
   background-color: rgba(127, 219, 70, 0.5)
