--- a/public/src/style.css
+++ b/public/src/style.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  font-size: 10px;
+  font-size: 16px;
   background: #111111;
   color: #ffc600;
   touch-action: manipulation;
@@ -20,9 +20,42 @@ body {
   /* font-family: 'Metal Mania', cursive; */
 }
 
+/* TOP NAVIGATION */
+nav {
+  background: rgb(33, 33, 33);
+  display: flex;
+  justify-content: space-evenly;
+  font-size: 2rem;
+}
+
+nav div {
+  display: inline-block;
+}
+
+.score_banner {
+  display: block;
+  text-align: center;
+}
+
+.score_title {
+  width: 100%;
+  font-size: 2rem;
+  background: #111111;
+  text-align: center;
+  color: rgb(255, 0, 0);
+}
+
+.score {
+  background: #111111;
+  font-size: 3rem;
+  color: rgb(255, 127, 0);
+  padding: 0 3rem;
+  line-height: 1;
+}
+
 h1 {
   text-align: center;
-  font-size: 8rem;
+  font-size: 6rem;
   font-weight: 400;
   line-height: 1;
   margin-bottom: 0;
@@ -45,12 +78,7 @@ h1 {
   background: rgb(0, 129, 28);
 }
 
-.score {
-  background: rgba(255, 255, 255, 0.2);
-  padding: 0 3rem;
-  line-height: 1;
-  border-radius: 1rem;
-}
+
 
 .game {
   width: 600px;
