--- a/public/src/style.css
+++ b/public/src/style.css
@@ -186,12 +186,17 @@ h1 {
 } */
 
 
-.scoreboard {
-  text-align: center;
-  font-family: monospace;
-  font-size: 2em;
+.scoreboard_wrapper {
+  margin: auto;
+  width: 500px;
 }
 
+.scoreboard {
+  font-family: monospace;
+  font-size: 2em;
+  width: 100%;
+  margin-top: 1em;
+}
 
 
 /* HOME PAGE BUTTONS */
